--- a/front/src/app/venda-cadastro/venda-cadastro.component.html
+++ b/front/src/app/venda-cadastro/venda-cadastro.component.html
@@ -1,8 +1,13 @@
+<div class="fundorosa mb-4">
+    <hr class=" mb-2 mt-0">
+    <div class="container">
+        <h2 class="pb-2">Cadastro Venda</h2>
+    </div>
+</div>
+
 <div class="container">
-    <h2 class="mt-3">Cadastro Venda</h2>
 
     <form>
-        <!--*ngFor="let venda of vendas"-->
 
         <div class="row">
 
@@ -10,8 +15,8 @@
                 <h5 class="form-label ">Cliente</h5>
 
                 <div class="dropdown d-grid" variant="outline-danger">
-                    <button class="btn text-center dropdown-toggle " type="button" id="dropdownMenuButton1"
-                        data-bs-toggle="dropdown" aria-expanded="false">
+                    <button class="btn text-center dropdown-toggle btn-outline-dark" type="button"
+                        id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                         Selecione...
                     </button>
                     <ul class="dropdown-menu text-start" aria-labelledby="dropdownMenuButton1">
@@ -19,19 +24,24 @@
                         </li>
                     </ul>
                 </div>
-                
+
 
             </div>
 
 
             <div class="mb-3 col-4">
                 <h5 for="" class="form-label">Frete</h5>
-                <input type="number" class="form-control" id="">
+                <div class="input-group">
+                    <span class="input-group-text">R$</span>
+                    <input type="text" class="form-control col-numero"
+                        aria-label="Dollar amount (with dot and two decimal places)">
+                    <span class="input-group-text">,00</span>
+                </div>
             </div>
         </div>
 
 
-        <div class="card">
+        <div class="card ">
             <div class="card-header">
                 <h4 class="mb-0">Itens</h4>
             </div>
@@ -43,15 +53,16 @@
                 </div>
 
                 <div class="row">
-                    
+
                     <div class="col-8">
                         <div class="dropdown d-grid" variant="outline-danger">
-                            <button class="btn text-center dropdown-toggle " type="button" id="dropdownMenuButton1"
-                                data-bs-toggle="dropdown" aria-expanded="false" >
+                            <button class="btn text-center dropdown-toggle btn-outline-dark" type="button"
+                                id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                                 Selecione...
                             </button>
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                <li *ngFor="let produto of produtos"><a class="dropdown-item" href="#">{{ produto.nome }}</a>
+                                <li *ngFor="let produto of produtos"><a class="dropdown-item" href="#">{{ produto.nome
+                                        }}</a>
                                 </li>
                             </ul>
                         </div>
@@ -59,21 +70,21 @@
                     </div>
 
                     <div class="mb-3 col-3">
-                        <input type="number" class="form-control" id="" >
+                        <input type="number" class="form-control" id="">
                     </div>
 
                     <div class="mb-3 col-1 d-grid">
-                        <button type="button" class="btn btn-outline-dark "  (click)="incluirItem()">+</button>
+                        <button type="button" class="btn btn-outline-dark " (click)="incluirItem()">+</button>
                     </div>
-                    
-                    
+
                 </div>
 
-                <div>
-                    <table class="table table-bordered mt-4">
+                <div class="">
+                    <h5 class="">Itens</h5>
+                    <table class="table table-hover table-bordered mt-2 ">
 
                         <thead class="thead-dark">
-                            <tr>
+                            <tr class="table-secondary">
                                 <th scope="col">Produto</th>
                                 <th scope="col">Valor unitário</th>
                                 <th scope="col">Quantidade</th>
@@ -83,19 +94,41 @@
 
                         <tbody *ngFor="let item of itens">
                             <tr>
-                                <td>{{ item.produto.nome }}</td>
-                                <td>{{ item.produto.valor | number: '1.2-2' }}</td>
+                                <th>{{ item.produto.nome }}</th>
+                                <td class="col-numero">{{ item.produto.valor | number: '1.2-2' }}</td>
                                 <td>{{ item.quantidade }}</td>
-                                <td>{{ item.total }}</td>
+                                <td class="col-numero">{{ item.venda.total }}</td>
                             </tr>
                         </tbody>
-            
+
 
                     </table>
                 </div>
-                
+
 
             </div>
+            <div class="card-footer bg-transparent border-dark rosa">
+                <div class="row">
+                    <div class=" col-1 mt-2">
+                        <h5 class="fw-bold">Total</h5>
+
+                    </div>
+                    <div class="col-9 mt-1">
+                        <h5 class="rosa">
+                            <hr class="bolinha">
+                        </h5>
+                    </div>
+                    <div class=" col-2 mt-1">
+                        <div class="input-group">
+
+                            <span class="input-group-text rosa">R$</span>
+                            <input type="" class="form-control rosa" id="" readonly>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
         </div>
 
 
