--- a/front/src/app/venda-cadastro/venda-cadastro.component.scss
+++ b/front/src/app/venda-cadastro/venda-cadastro.component.scss
@@ -1,10 +1,53 @@
-.dropdown-toggle {
-    background-color: transparent;
-    border-color: rgb(0, 0, 0);
-    border-style: solid;
-    
-}
 
 .card-header{
   background-color:darksalmon;
+}
+
+input:focus, input[type]:focus{   
+  border-color: rgba(229, 103, 23, 0.8);
+  box-shadow: 0 1px 1px rgba(229, 103, 23, 0.075) inset, 0 0 8px rgba(229, 103, 23, 0.6);
+  outline: 0 none;
+}
+
+input, input[type], span{   
+  border-color: rgba(0, 0, 0, 0.8);
+  outline: 0 none;
+}
+
+input.rosa, span.rosa{
+  border-color: rgba(253, 165, 143, 0.8);
+  outline: 0 none;
+}
+
+.button {
+  transition-duration: 0.9s;
+}
+
+button:hover, button[type]:hover{
+  background-color: rgba(253, 165, 143, 0.8);
+  
+}
+
+button:focus, button[type]:focus{   
+  border-color: rgba(229, 103, 23, 0.8);
+  box-shadow: 0 1px 1px rgba(229, 103, 23, 0.075) inset, 0 0 8px rgba(229, 103, 23, 0.6);
+  outline: 0 none;
+}
+
+.disabled {
+  opacity: 0.6;
+  cursor: not-allowed;
+}
+
+.rosa{
+  color: rgba(253, 165, 143, 0.8);
+}
+
+.bolinha{
+  border-bottom: dashed 1px #994d4d;
+
+}
+
+.fundorosa{
+  background-color: rgb(255, 223, 225);;
 }
