--- a/front/src/app/venda-cadastro/venda-cadastro.component.scss
+++ b/front/src/app/venda-cadastro/venda-cadastro.component.scss
@@ -3,13 +3,13 @@
   background-color:darksalmon;
 }
 
-input:focus, input[type]:focus{   
+input:focus, input[type]:focus, select:focus{   
   border-color: rgba(229, 103, 23, 0.8);
   box-shadow: 0 1px 1px rgba(229, 103, 23, 0.075) inset, 0 0 8px rgba(229, 103, 23, 0.6);
   outline: 0 none;
 }
 
-input, input[type], span{   
+input, input[type], span, select{   
   border-color: rgba(0, 0, 0, 0.8);
   outline: 0 none;
 }
